--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :zip %><br>
     <%= f.text_field :zip %>
   </div>
+  <div class="field">
+    <%= f.label :phone %><br>
+    <%= f.text_field :phone, placeholder: "No spaces, dashes or parentheses please" %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
