Formats phone number after save

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="field">
     <%= f.label :phone %><br>
-    <%= f.text_field :phone, placeholder: "No spaces, dashes or parentheses please" %>
+    <%= f.telephone_field :phone, placeholder: "No spaces, dashes or parentheses please" %>
   </div>
   <div class="actions">
     <%= f.submit %>
