Adds phone to location JSON views

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -20,5 +20,10 @@
   <%= @location.zip %>
 </p>
 
+<p>
+  <strong>Phone:</strong>
+  <%= @location.phone %>
+</p>
+
 <%= link_to 'Edit', edit_location_path(@location) %> |
 <%= link_to 'Back', locations_path %>
