Adds Equipment Alley account to locations

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -31,6 +31,10 @@
     <%= f.label :phone %><br>
     <%= f.telephone_field :phone, placeholder: "No spaces, dashes or parentheses please" %>
   </div>
+  <div class="field">
+    <%= f.label :equipment_alley_account, "Equipment Alley Account Number" %><br>
+    <%= f.text_field :equipment_alley_account %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
